--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
             formData.append('file', fileInput);
 
             try {
-                const response = await fetch('http://localhost:3000/upload', {
+                const response = await fetch('http://40.112.48.169:3000/upload', {
                     method: 'POST',
                     body: formData
                 });
